--- a/base.css
+++ b/base.css
@@ -1,17 +1,47 @@
 html, body {
     margin: 0;
 }
+
 body {
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
 }
 
+p, label {
+    font-size: 18px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    width: 40%;
+}
+
+.labels {
+    display: flex;
+    padding: 0.25em;
+}
+
+.buttons {
+    display: flex;
+    width: 36%;
+    justify-content: center;
+}
+
+.labels label {
+    width: 10%;
+    margin-right: 1em;
+    text-align: right;
+}
+
 .wrapper {
     width: 1200px;
     display: flex;
     margin: 0 auto;
-    background-color: aquamarine;
 }
 .main {
     display: flex;
@@ -20,19 +50,26 @@ body {
 }
 .menu {
     width: 15%;
-    background-color: aqua;
     padding: 10px 20px 0px;
 }
-.header {
-    background-color: rgb(5, 108, 108);
-    min-height: 150px;
+
+.menu ul{
+    list-style-type: none;
 }
+
+.header {
+    min-height: 150px;
+    display: flex;
+    align-items: center;
+}
+
 .content {
-    background-color: white;
     min-height: 300px;
     padding: 20px;
 }
 .footer {
-    background-color: rgb(99, 56, 240);
+    background-color: rgb(207, 3, 3);
     min-height: 150px;
+    padding-left: 1.5em;
+    color: #f1f1f1;
 }
